<resources>
    <string name="app_name">Resu</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="action_sign_up">Sign up</string>

    <string name="transition_logo">appLogoTransition</string>
    <string name="welcome_msg">Welcome to \nResu</string>
    <string name="login_app_desc">Student Data Management App</string>
    <string name="action_forgot_password">Forgot Password?</string>
    <string name="no_account_msg">Don\'t have an account?</string>
    <string name="username_hint">Username</string>
    <string name="repeat_password_hint">Repeat password</string>
    <string name="students">Students</string>
    <string name="tab_home_label">Home</string>
    <string name="tab_search_label">Search</string>
    <string name="tab_filter_label">Filter</string>
    <string name="search_page_title">Search For</string>
    <string name="search_hint">Enter name, phone, email</string>
    <string name="filter_page_title">Filter Settings</string>
    <string name="student">Student</string>
    <string name="Graduate">Graduate</string>
    <string name="any">Any</string>
    <string name="state">State</string>
    <string name="level">Level</string>
    <string name="year">Year</string>
    <string name="degree">Degree</string>
    <string name="bachelor">Bachelor</string>
    <string name="master">Master</string>
    <string name="doctoral">Doctoral</string>
    <string name="college">College</string>
    <string name="department">Department</string>
    <string name="branch">Branch</string>
    <string name="residence">Residence</string>
    <string name="city">City</string>
    <string name="in_college_residence">In college residence?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="other">Other</string>
    <string name="evening_college">Evening college?</string>
    <string name="age">Age</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="add_student">Add Student</string>
    <string name="upload_image">Upload\nimage</string>
    <string name="name">Name</string>
    <string name="morning">Morning</string>
    <string name="evening">Evening</string>
    <string name="transition_app_title">appTitleTransition</string>
    <string name="transition_email_field">emailFieldTransition</string>
    <string name="transition_password">passwordTransition</string>
    <string name="transition_auth_btn">authBtnTransition</string>
    <string name="invalid_username">invalid username!</string>
    <string name="invalid_email">invalid email!</string>
    <string name="invalid_password">invalid password!</string>
    <string name="invalid_repeat_password">passwords are not the same!</string>
    <string name="field_required">this field is required!</string>
    <string name="min_username_error">username must be at least 2 characters!</string>
    <string name="min_password_error">password must be at least 6 characters!</string>
    <string name="different_repeat_passe_error">passwords are not the same!</string>
    <string name="no_students_found">No students found</string>
    <string name="transition_student_image">studentImageTransition</string>
    <string name="transition_student_name">studentNameTransition</string>


    <string-array name="cities">
        <item>بغداد</item>
        <item>دهوك</item>
        <item>سليمانية</item>
        <item>اربيل</item>
        <item>نينوى</item>
        <item>كركوك</item>
        <item>صلاح الدين</item>
        <item>ديالى</item>
        <item>الانبار</item>
        <item>واسط</item>
        <item>بابل</item>
        <item>كربلاء</item>
        <item>القادسية</item>
        <item>النجف</item>
        <item>ميسان</item>
        <item>ذي قار</item>
        <item>المثنى</item>
        <item>البصرة</item>
    </string-array>
</resources>
