<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
            <variable
                name="viewModel"
                type="com.haytham.coder.graduationproject.viewModel.SignInViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        app:layoutDescription="@xml/fragment_sign_in_xml_container_scene">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />

        <com.google.android.material.textview.MaterialTextView
            android:transitionName="@string/transition_app_title"
            android:id="@+id/appTitleText"
            style="@style/authenticationTitleStyle"
            endColor="@{@color/colorBlue}"
            startColor="@{@color/colorDarkBlue}"
            android:text="@string/welcome_msg"
            app:layout_constraintBottom_toTopOf="@id/appDescriptionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/appDescriptionText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/login_app_desc"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appTitleText"
            app:layout_constraintVertical_bias="1.0" />

        <ImageView
            android:transitionName="@string/transition_logo"
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/email"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/appDescriptionText" />


        <com.google.android.material.textfield.TextInputEditText
            android:transitionName="@string/transition_email_field"
            android:id="@+id/email"
            style="@style/login_edit_text_style"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/prompt_email"
            android:text="@={viewModel.email}"
            android:inputType="textEmailAddress"
            setErrorMsg="@{viewModel.emailError}"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:transitionName="@string/transition_password"
            android:id="@+id/password"
            style="@style/login_edit_text_style"
            android:layout_marginTop="12dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/prompt_password"
            android:text="@={viewModel.password}"
            setErrorMsg="@{viewModel.passwordError}"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/forgotPasswordText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/forgotPasswordText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/merriweather_regular"
            android:text="@string/action_forgot_password"
            android:textSize="12sp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/loginBtn"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <androidx.appcompat.widget.AppCompatButton
            android:transitionName="@string/transition_auth_btn"
            android:id="@+id/loginBtn"
            style="@style/authentication_btn_style"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="64dp"
            android:text="@string/action_sign_in_short"
            android:onClick="@{()->viewModel.login()}"
            app:layout_constraintBottom_toTopOf="@id/signUpText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forgotPasswordText"
            app:layout_constraintVertical_bias="0.2" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/noAccountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_msg"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/signUpText"
            app:layout_constraintEnd_toStartOf="@id/signUpText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/signUpText" />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:alpha="0.87"
            android:text="@string/action_sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/noAccountText"
            app:layout_constraintTop_toBottomOf="@id/loginBtn" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.2" />
    </androidx.constraintlayout.motion.widget.MotionLayout>

    </ScrollView>
</layout>