<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.haytham.coder.graduationproject.domain.viewModel.SignUpViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <ImageView
            android:id="@+id/backButton"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:tint="@color/colorPrimaryDark"
            android:alpha="0.87" />

        <com.google.android.material.textview.MaterialTextView
            android:transitionName="@string/transition_app_title"
            android:id="@+id/appTitleText"
            android:text="@string/app_name"
            app:layout_constraintBottom_toTopOf="@id/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="spread_inside"
            style="@style/authenticationTitleStyle"
            startColor="@{@color/colorDarkBlue}"
            endColor="@{@color/colorBlue}" />


        <ImageView
            android:transitionName="@string/transition_logo"
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="32dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintBottom_toTopOf="@id/username"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/appTitleText" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/username"
            style="@style/login_edit_text_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
            android:layout_marginTop="24dp"
            android:drawableStart="@drawable/ic_user"
            android:hint="@string/username_hint"
            android:text="@={viewModel.username}"
            setErrorMsg="@{viewModel.usernameError}"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <com.google.android.material.textfield.TextInputEditText
            android:transitionName="@string/transition_email_field"
            android:id="@+id/email"
            style="@style/login_edit_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_email"
            android:hint="@string/prompt_email"
            android:text="@={viewModel.email}"
            setErrorMsg="@{viewModel.emailError}"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            app:layout_constraintBottom_toTopOf="@+id/password"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <com.google.android.material.textfield.TextInputEditText
            android:transitionName="@string/transition_password"
            android:id="@+id/password"
            style="@style/login_edit_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/prompt_password"
            android:text="@={viewModel.password}"
            setErrorMsg="@{viewModel.passwordError}"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/repeatPassword"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/repeatPassword"
            style="@style/login_edit_text_style"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/ic_password"
            android:hint="@string/repeat_password_hint"
            android:text="@={viewModel.repeatPass}"
            setErrorMsg="@{viewModel.repeatPassError}"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@id/signUpBtn"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />


        <androidx.appcompat.widget.AppCompatButton
            android:transitionName="@string/transition_auth_btn"
            android:id="@+id/signUpBtn"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="48dp"
            android:text="@string/action_sign_up"
            android:onClick="@{()->viewModel.authenticate()}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/repeatPassword"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/repeatPassword"
            app:layout_constraintVertical_bias="0.2"
            style="@style/authentication_btn_style" />


        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="32dp"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="64dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.25" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>